--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:chasen8488@afsenyc.org">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/chasen8488">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
