--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Chase Nasser!</h1>
-				<p>I'm best known as the best student from <em>Class</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as the best student from <em>Class</em>, you shoudn't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
