--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Chase Nasser!</h1>
-				<p>I'm best known as the best student from <em>Class</em>, you shoudn't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as a smart student from <em>Class</em>, you shoudn't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
