--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Chase Nasser, Best Student</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Chase Nasser!</h1>
-				<p>I'm best known as a smart student from <em>Class</em>, you shoudn't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:chasen8488@afsenyc.org">email</a></li>
-        		<li><a href="https://github.com/chasen8488">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Chase Nasser, Best Student
+---
+<div class="blurb">
+	<h1>Hi there, I'm Chase Nasser!</h1>
+	<p>I'm best known as a good student at AFSE you should trust me. <a href="/about">Read more about my life and class...</a></p>
+</div><!-- /.blurb -->
